--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -31,6 +31,9 @@
 }
 
 @media (max-width: 600px) {
+  .about__desc {
+    text-align: left;
+  }
   .app .about {
     align-items: flex-start;
     margin-top: 2em;
